--- a/configure.ac
+++ b/configure.ac
@@ -166,7 +166,7 @@ AC_FUNC_ALLOCA
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS_ONCE(m4_flatten([
+AC_CHECK_HEADERS(m4_flatten([
 	dirent.h
 	dlfcn.h
 	elf.h
