tests: add GREP_P prerequisite for availabilty of grep -P
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -1786,6 +1786,10 @@ test_lazy_prereq DIG '
 	dig -v
 '
 
+test_lazy_prereq GREP_P '
+	grep -P --help
+'
+
 test_lazy_prereq JQ '
 	jq --version
 '
