--- a/.gitignore
+++ b/.gitignore
@@ -137,6 +137,7 @@ tests/t[0-9][0-9][0-9]*
 /t/test-bin/*-[0-9]
 /t/test-bin/syd-*
 !/t/test-bin/syd-*.[ch]
+!/t/test-bin/syd-*.p[ly]
 /t/test-bin/threads_execve
 /t/test-bin/sockmatchtest
 /t/test-bin/wildtest
