sydbox: initial system call fuzzing tests
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/t/test-data/Makefile.am
+++ b/t/test-data/Makefile.am
@@ -5,7 +5,11 @@ CLEANFILES= \
 	    *.gcda \
 	    *.gcno \
 	    *.gcov
-EXTRA_DIST= wildtest.txt
+EXTRA_DIST= \
+	    trinity.syd-2 \
+	    wildtest.txt
 
 syddir=$(libexecdir)/$(PACKAGE)/t/test-data
-syd_DATA= wildtest.txt
+syd_DATA= \
+	  trinity.syd-2 \
+	  wildtest.txt
