--- a/t/Makefile.am
+++ b/t/Makefile.am
@@ -51,7 +51,8 @@ TESTS= \
 	t0009-core-exec.sh \
 	t0010-core-chdir.sh \
 	t0011-net-netmatch.sh \
-	t0012-net-sandbox.sh
+	t0012-net-sandbox.sh \
+	t0013-sys-fuzzer.sh
 check_SCRIPTS+= $(TESTS)
 
 syddir=$(libexecdir)/$(PACKAGE)/t
