tests: fix PY3 lazy prereq
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -1795,9 +1795,9 @@ test_lazy_prereq JQ '
 	jq --version
 '
 
-test_lazy_prereq PY3 "
-	python --version | grep -iq 'Python 3'
-"
+test_lazy_prereq PY3 '
+	python3 --version | grep -iq "Python 3"
+'
 
 test_lazy_prereq TRINITY '
 	trinity --help
