autotools: add python scripts to extra dist
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/t/test-bin/Makefile.am
+++ b/t/test-bin/Makefile.am
@@ -68,6 +68,7 @@ syd_PROGRAMS= wildtest realpath_mode-1 sockmatchtest \
 
 check_SCRIPTS= $(syd_SCRIPTS)
 check_PROGRAMS= $(syd_PROGRAMS)
+EXTRA_DIST+= $(syd_SCRIPTS)
 
 .PHONY: check-build
 check-build:
