dev: exclude t/ directory for code coverage
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -128,6 +128,7 @@ coverity-tarball: coverity-build
 .PHONY: coveralls
 coveralls:
 	coveralls \
+		--exclude t \
 		--exclude tests \
 		--exclude target \
 		--gcov-options '\-lp'
