builds: use --test and --dump to check/verify build host system capabilities
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/.builds/x86_64-archlinux.yml
+++ b/.builds/x86_64-archlinux.yml
@@ -49,6 +49,12 @@ tasks:
 - make: |
     cd sydbox
     make -j V=1
+- test: |
+    cd sydbox
+    ./src/sydbox --test
+- arch: |
+    cd sydbox
+    ./src/sydbox -d2 true
 - check: |
     cd sydbox
     make -j V=1 check && touch .check_ok
