--- a/.builds/arm64-debian-sid.yml
+++ b/.builds/arm64-debian-sid.yml
@@ -51,6 +51,12 @@ tasks:
 - make_static: |
     cd sydbox
     make -j V=1
+- test: |
+    cd sydbox
+    ./src/sydbox --test
+- arch: |
+    cd sydbox
+    ./src/sydbox -d2 true
 - check_static: |
     cd sydbox
     make -j V=1 check && touch .check_ok
