--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -16,6 +16,10 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses/ .
 
+# SydBox is in testing, cheers!
+IN_SYDBOX_TEST=1
+export IN_SYDBOX_TEST
+
 # Keep the original TERM for say_color
 ORIGINAL_TERM=$TERM
 
