tests: trace children when --strace is given
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/t/bin-wrappers/sydbox.in
+++ b/t/bin-wrappers/sydbox.in
@@ -10,7 +10,7 @@ fi
 
 eexec() {
 	if test -n "$SYDBOX_STRACE_ENABLED"; then
-		exec strace -o "$SHOEBOX_STRACE" -- "$@"
+		exec strace -ff -o "$SHOEBOX_STRACE" -- "$@"
 	else
 		exec "$@"
 	fi
