builds: add --prefix=/usr to configure
This is necessary otherwise the script to find
the read-only configure flags is going to fail
to locate any flags.

Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/.builds/x86_64-fedora-rawhide.yml
+++ b/.builds/x86_64-fedora-rawhide.yml
@@ -50,7 +50,7 @@ tasks:
 - conf_static: |
     cd sydbox
     ./autogen.sh
-    CFLAGS="-O0 -g -ggdb" ./configure --enable-static
+    CFLAGS="-O0 -g -ggdb" ./configure --enable-maintainer-mode --prefix=/usr --enable-static
 - make_static: |
     cd sydbox
     make -j V=1
@@ -74,7 +74,7 @@ tasks:
 - conf: |
     cd sydbox
     ./autogen.sh
-    CFLAGS="-O0 -g -ggdb" ./configure --disable-static
+    CFLAGS="-O0 -g -ggdb" ./configure --enable-maintainer-mode --prefix=/usr --disable-static
 - make: |
     cd sydbox
     make -j V=1
