--- a/.builds/x86_64-archlinux.yml
+++ b/.builds/x86_64-archlinux.yml
@@ -45,7 +45,7 @@ tasks:
 - conf: |
     cd sydbox
     ./autogen.sh
-    CFLAGS="-O0 -g -ggdb" ./configure --disable-static
+    CFLAGS="-O0 -g -ggdb" ./configure --enable-maintainer-mode --prefix=/usr --disable-static
 - make: |
     cd sydbox
     make -j V=1
