--- a/t/valgrind/Makefile.am
+++ b/t/valgrind/Makefile.am
@@ -4,47 +4,7 @@ SUBDIRS= .
 syddir=$(libexecdir)/$(PACKAGE)/t/valgrind
 VALGRIND_SRCS= \
 	     analyze.sh \
-	     valgrind.sh.in
-syd_SCRIPTS= analyze.sh \
-	     valgrind.sh \
-	     ./bin/sydbox \
-	     ./bin/sydbox-dump \
-	     ./bin/sydfmt \
-	     ./bin/shoebox
+syd_SCRIPTS= analyze.sh
 syd_DATA= default.supp
-
-if ENABLE_STATIC
-BUILD_EXEC_PREFIX=
-else
-BUILD_EXEC_PREFIX= $(LIBTOOL) --mode=execute --
-endif
-
-valgrind.sh: valgrind.sh.in Makefile
-	$(AM_V_GEN)
-	$(AM_V_at)$(SED) -e 's:@TOP_BUILDDIR@:$(abs_top_builddir):g' \
-			 -e 's:@BINDIR@:$(bindir):g' \
-			 -e 's:@LIBEXECDIR@:$(libexecdir):g' \
-			 -e 's:@BUILD_EXEC_PREFIX@:$(BUILD_EXEC_PREFIX):g' \
-			 < $< > $@
-	$(AM_V_at)chmod +x $@
-
-.PHONY: bin
-bin:
-	$(MKDIR_P) bin
-bin/sydbox: valgrind.sh bin
-	cp -fp $< bin/sydbox
-bin/sydbox-dump: valgrind.sh bin
-	cp -fp $< bin/sydbox-dump
-bin/sydfmt: valgrind.sh bin
-	cp -fp $< bin/sydbox-sydfmt
-bin/shoebox: valgrind.sh bin
-	cp -fp $< bin/sydbox-shoebox
-
-install-exec-hook:
-	$(MKDIR_P) $(DESTDIR)$(syddir)/bin
-	cp -fp valgrind.sh $(DESTDIR)$(syddir)/bin/sydbox
-	cp -fp valgrind.sh $(DESTDIR)$(syddir)/bin/sydbox-dump
-	cp -fp valgrind.sh $(DESTDIR)$(syddir)/bin/sydfmt
-	cp -fp valgrind.sh $(DESTDIR)$(syddir)/bin/shoebox
 
 EXTRA_DIST= $(VALGRIND_SRCS) $(syd_DATA)
