--- a/.builds/x86_64-archlinux.yml
+++ b/.builds/x86_64-archlinux.yml
@@ -63,7 +63,6 @@ tasks:
     tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-test.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
 - clean: |
     cd sydbox
-    make clean
     rm -f .check_ok
     rm -fr t/test-suite.log t/test-results t/trash*
 - check_strace: |
@@ -77,9 +76,9 @@ tasks:
     make clean
     rm -f .check_ok
     rm -fr t/test-suite.log t/test-results t/trash*
-- check_valgrind: |
-    cd sydbox
-    make -j V=1 TEST_OPTIONS="--valgrind" check && touch .check_ok
-    cat {syd,t}/test-suite.log || true
-    test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+#- check_valgrind: |
+#    cd sydbox
+#    make -j V=1 TEST_OPTIONS="--valgrind" check && touch .check_ok
+#    cat {syd,t}/test-suite.log || true
+#    test -e .check_ok
+#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
