--- a/Makefile.am
+++ b/Makefile.am
@@ -133,25 +133,12 @@ coveralls:
 		--exclude target \
 		--gcov-options '\-lp'
 
+.PHONY: check-build
 check-build: all
 	${MAKE} ${AM_MAKEFLAGS} -C syd check-build
 	${MAKE} ${AM_MAKEFLAGS} -C t check-build
 
-check-code-coverage: check-build
-	${MAKE} ${AM_MAKEFLAGS} -C t check-code-coverage
-
-.PHONY: coveralls
-coveralls:
-	coveralls \
-		--exclude t \
-		--exclude tests \
-		--exclude target \
-		--gcov-options '\-lp'
-
-check-build: all
-	${MAKE} ${AM_MAKEFLAGS} -C syd check-build
-	${MAKE} ${AM_MAKEFLAGS} -C t check-build
-
+.PHONY: check-code-coverage
 check-code-coverage: check-build
 	${MAKE} ${AM_MAKEFLAGS} -C t check-code-coverage
 
