--- a/.builds/x86_64-alpine-edge.yml
+++ b/.builds/x86_64-alpine-edge.yml
@@ -73,7 +73,7 @@ tasks:
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
     tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
-- clean_strace: |
+- clean_valgrind: |
     cd sydbox
     rm -f .check_ok
     rm -fr t/test-suite.log t/test-results t/trash*
