--- a/t/bin-wrappers/Makefile.am
+++ b/t/bin-wrappers/Makefile.am
@@ -10,7 +10,7 @@ EXTRA_DIST=
 if ENABLE_STATIC
 BUILD_EXEC_PREFIX=
 else
-BUILD_EXEC_PREFIX= $(top_srcdir)/$(LIBTOOL) --mode=execute --
+BUILD_EXEC_PREFIX= $(SHELL) $(top_builddir)/../libtool --mode=execute
 endif
 
 sydbox: sydbox.in Makefile
