sydbox: numerous fixes to the core loop and bpf filters
- fix SIGCHLD handling (still wip, needs atomic load)
- do not try to load unsupported architectures (e.g: aarch on x86_64)
- no testing of supported architecture on startup which saves {1..3} fork()s
- make sure hash table deallocation checker works correctly.
  (fixes a segfault)
- handle ENOTTY for SECCOMP_NOTIFY_RE{CV,RP} which is identical to
  ENOENT (process is dead or is a zombie now waiting to be reaped)
- don't try to free access control list items before they're allocated
  (fixes a segfault)
- bitpack boolean elements of struct sydbox_t to save some space.
- calculate bpf filter count and output to standard error with --dump
- make all bpf filter rule add actions architecture aware
  (e.g: socketcall, bind, connect... etc. are rewritten on x86 and not on
  x86-64)
- fix execve user notify bpf filter when execve sandboxing is off
- more fixes to clone{,2,3} handling

Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/configure.ac
+++ b/configure.ac
@@ -231,6 +231,14 @@ or1k*)
 	arch=or1k
 	AC_DEFINE([OR1K], 1, [Define for the OpenRISC 1000 architecture.])
 	;;
+parisc64*)
+	arch=parisc64
+	AC_DEFINE([PARISC64], 1, [Define for the PARISC64 architecture.])
+	;;
+parisc*)
+	arch=parisc
+	AC_DEFINE([PARISC], 1, [Define for the PARISC architecture.])
+	;;
 powerpc*)
 	karch=powerpc
 	karch_m32=powerpc
