sydbox: sydbox: numerous fixes to the core loop & bpf (take 2)
- set seccomp attributes tskip and sysrawrc
  sysrawrc is useful to get the system error codes,
  rather than libseccomp's ECANCELED, allows for more powerful
  error handling.
  tskip is not used yet but gives the ability to change
  the number of a system call to -1 to prevent it from
  executing which is something we used to do back in
  sydbox-1.2.0 ptrace days and it's TODO here, possibly
  in deny.
- use a C11 atomic bool to fix the sigchild race condition in
  --test and main program. SydBox requires a C11 compiler,
  rather than a C99 compiler now. The autotools is updated
  to reflect this.
- fix architecture detection with --enable-static. Incorrect
  use of LDFLAGS rather than LIBS caused static linking to fail
  in the architecture checker configure script.

Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -171,7 +171,7 @@ sydbox_LDADD= \
 	      $(top_builddir)/syd/libsyd_@LIBSYD_PC_SLOT@.la \
 	      -L$(top_builddir)/syd/.libs \
 	      -lsyd_@LIBSYD_PC_SLOT@ \
-	      @SYDBOX_LDFLAGS@ \
+	      @SYDBOX_LIBTOOL_FLAGS@ \
 	      $(libseccomp_LIBS) \
 	      $(CODE_COVERAGE_LIBS)
 if WANT_DEBUG
