sydbox: numerous fixes to the core loop & bpf (take 4)
- fix the race condition on reading the seccomp notification
  file descriptor on exit.
- handle SIG{CONT,STOP} interrupts with C11 atomics akin to
  how we do it for SIGCHLD.
- make sure child wait functions play nice with handle_interrupt
  (wip)
- make sure to use fallback system call numbers if either one of
  pidfd_open, pidfd_send_signal, pidfd_getfd, process_vm_readv or
  process_vm_writev is unavailable via Linux kernel headers.

Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/configure.ac
+++ b/configure.ac
@@ -822,7 +822,7 @@ if test x"$PIDFD_GETFD_WARN" = x"1"; then
 	PIDFD_WARN=1
 fi
 if test x"$PIDFD_SEND_SIGNAL" = x"1"; then
-	AC_MSG_WARN([__NR_pidfd_send_signal not declared! Setting pidfd_getfd to 424.])
+	AC_MSG_WARN([__NR_pidfd_send_signal not declared! Setting pidfd_send_signal to 424.])
 	PIDFD_WARN=1
 fi
 if test x"$PROCESS_VM_WARN" = x"1"; then
