sydbox: fix path to sydbox sysconfdir
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,7 +1,7 @@
 AM_MAKEFLAGS= --no-print-directory
 EXTRA_DIST=
 
-sydboxsysconfdir= $(sysconfdir)$(PACKAGE)
+sydboxsysconfdir= $(sysconfdir)/$(PACKAGE)
 sydboxsysconf_DATA= \
 		  default.syd-2 \
 		  sydbox.bashrc
