--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -80,10 +80,10 @@ fi
 SYDBOX_BUILD_DIR="@TOP_BUILDDIR@"
 if test -z "$SYDBOX_TEST_INSTALLED"
 then
-	"$SYDBOX_BUILD_DIR"/src/sydbox >/dev/null 2>&1
-	if test $? != 1
+	"$SYDBOX_BUILD_DIR"/src/sydbox --version >/dev/null 2>&1
+	if test $? != 0
 	then
-		echo >&2 'error: you do not seem to have built sydbox yet.'
+		echo >&2 'error: you do not seem to have built SydBox yet.'
 		exit 1
 	fi
 fi
