--- a/.builds/x86_64-fedora-rawhide.yml
+++ b/.builds/x86_64-fedora-rawhide.yml
@@ -66,25 +66,25 @@ tasks:
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
     tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-static.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
-- clean_strace: |
-    rm -f .check_ok
-    rm -fr t/test-suite.log t/test-results t/trash*
-- check_strace: |
-    cd sydbox
-    make -j V=1 TEST_OPTIONS="--strace" check && touch .check_ok
-    cat {syd,t}/test-suite.log || true
-    test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
-- clean_valgrind: |
-    cd sydbox
-    rm -f .check_ok
-    rm -fr t/test-suite.log t/test-results t/trash*
-- check_valgrind: |
-    cd sydbox
-    make -j V=1 TEST_OPTIONS="--valgrind" check && touch .check_ok
-    cat {syd,t}/test-suite.log || true
-    test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+#- clean_strace: |
+#    rm -f .check_ok
+#    rm -fr t/test-suite.log t/test-results t/trash*
+#- check_strace: |
+#    cd sydbox
+#    make -j V=1 TEST_OPTIONS="--strace" check && touch .check_ok
+#    cat {syd,t}/test-suite.log || true
+#    test -e .check_ok
+#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+#- clean_valgrind: |
+#    cd sydbox
+#    rm -f .check_ok
+#    rm -fr t/test-suite.log t/test-results t/trash*
+#- check_valgrind: |
+#    cd sydbox
+#    make -j V=1 TEST_OPTIONS="--valgrind" check && touch .check_ok
+#    cat {syd,t}/test-suite.log || true
+#    test -e .check_ok
+#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
 - clean_static: |
     cd sydbox
     make clean
